--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".BookingReceiver"/>
+        <receiver android:name="com.example.yudhisthira.carbooking.database.BackendSyncScheduler"/>
+        <service android:name="com.example.yudhisthira.carbooking.database.BackendSyncManager"/>
     </application>
 
 </manifest>
